--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
       <button type="submit">Search</button>
     </form>
 
-    <span class="loader hidden"></span>
+    <div class="loader hidden"></div>
 
     <ul class="gallery"></ul>
 
